# Engram

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CURSOR.md  Dockerfile  README.md  docker-compose.yml  launch-article.md  pitch-deck.md  pyproject.toml  test_echomem.py
.claude-plugin/: marketplace.json
.cursor/rules/: engram-continuity.mdc
.github/workflows/: publish.yml  test.yml
dashboard/: package-lock.json  package.json
docs/pdf/: manifest.json
engram/: __init__.py  cli.py  example_agent.py  main_cli.py  mcp_server.py  observability.py  simple.py  test_no_api.py  test_quick.py
engram-bridge/: pyproject.toml
engram-orchestrator/: pyproject.toml
engram/api/: __init__.py  app.py  auth.py  schemas.py  server.py
engram/benchmarks/: longmemeval.py
engram/configs/: __init__.py  active.py  base.py
engram/core/: __init__.py  active_memory.py  category.py  conflict.py  consolidation.py  decay.py  distillation.py  echo.py  forgetting.py  fusion.py  graph.py  handoff.py  handoff_backend.py  handoff_bus.py  kernel.py  policy.py  profile.py  provenance.py  retrieval.py  scene.py  traces.py
engram/db/: async_sqlite.py  sqlite.py
engram/decay/: __init__.py
engram/embeddings/: gemini.py  nvidia.py  ollama.py  openai.py  simple.py
fadem/: example_agent.py  test_quick.py
scripts/: __init__.py  build_doc_book.py  generate_deep_docs.py  retention_sim.py
tests/: test_active_memory.py  test_agent_policies.py  test_api_v2.py  test_backward_compat.py  test_consolidation.py  test_cosine_similarity.py  test_distillation.py  test_docgen_analyze.py  test_docgen_pipeline.py  test_dual_retrieval.py  test_forgetting.py  test_handoff.py  test_handoff_api_compat.py  test_handoff_hosted_backend.py  test_intent.py  test_mcp_handoff_lifecycle.py  test_mcp_tool_dispatch.py  test_memory_client_v2.py  test_memory_types.py  test_migration.py  test_namespace_system.py  test_policy_masking.py  test_profile.py  test_refaware_decay.py  test_scene.py  test_security_handoff_strict.py  test_security_sessions.py  test_sleep_cycle.py  test_sqlite_connection_pool.py  test_sqlite_vec.py  test_staging.py  test_traces.py  test_trust_scores.py  testlongmemeval_runner.py
(+70 files in other folders)
