[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-memory"
version = "0.4.0"
description = "Memory layer for AI agents — biologically-inspired forgetting, multi-agent trust, and plug-and-play integrations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Engram Team"}
]
keywords = ["memory-layer", "mcp", "claude", "cursor", "codex", "ai", "agents", "forgetting", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.3.0"]
openai = ["openai>=1.0.0"]
ollama = ["ollama>=0.4.0"]
qdrant = ["qdrant-client>=1.7.0"]
mcp = [
    "mcp>=1.0.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
all = [
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "ollama>=0.4.0",
    "qdrant-client>=1.7.0",
    "requests>=2.28.0",
    "mcp>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
]
async = [
    "aiosqlite>=0.19.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aiosqlite>=0.19.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
engram = "engram.main_cli:main"
engram-mcp = "engram.mcp_server:run"
engram-install = "engram.cli:install"
engram-api = "engram.api.server:run"

[project.urls]
Homepage = "https://github.com/Ashish-dwi99/Engram"
Repository = "https://github.com/Ashish-dwi99/Engram"
Issues = "https://github.com/Ashish-dwi99/Engram/issues"
Documentation = "https://github.com/Ashish-dwi99/Engram#readme"
Changelog = "https://github.com/Ashish-dwi99/Engram/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["engram*"]
